--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
 
 networks:
   nginx-proxy:
-    external: true
+    external: false
   public:
-    external:
-      name: public
+    external: false
