--- a/apps.json
+++ b/apps.json
@@ -6,6 +6,7 @@
       "icon": "plex",
       "target": "_blank"
     },
+    { "name": "Pi-hole", "url": "geronimo:8081", "icon": "pi-hole" },
     {
       "name": "Home Assistant",
       "url": "geronimo:8123",
@@ -51,7 +52,6 @@
     },
     { "name": "InfluxDB", "url": "geronimo:8086", "icon": "database" },
     { "name": "Grafana", "url": "geronimo:3000", "icon": "chart-bar" },
-    { "name": "Portainer", "url": "geronimo:9000", "icon": "docker" },
-    { "name": "Pi-hole", "url": "geronimo:8081", "icon": "pi-hole" }
+    { "name": "Portainer", "url": "geronimo:9000", "icon": "docker" }
   ]
 }
