--- a/apps.json
+++ b/apps.json
@@ -2,56 +2,56 @@
   "apps": [
     {
       "name": "Plex",
-      "url": "geronimo:32400",
+      "url": "192.168.1.99:32400",
       "icon": "plex",
       "target": "_blank"
     },
-    { "name": "Pi-hole", "url": "geronimo:8081", "icon": "pi-hole" },
+    { "name": "Pi-hole", "url": "192.168.1.99:8081", "icon": "pi-hole" },
     {
       "name": "Home Assistant",
-      "url": "geronimo:8123",
+      "url": "192.168.1.99:8123",
       "icon": "home-assistant"
     },
-    { "name": "Cockpit", "url": "geronimo:9090", "icon": "airplane" },
-    { "name": "Homer", "url": "geronimo:8080", "icon": "chart-donut" },
+    { "name": "Cockpit", "url": "192.168.1.99:9090", "icon": "airplane" },
+    { "name": "Homer", "url": "192.168.1.99:8080", "icon": "chart-donut" },
     {
       "name": "SUI",
-      "url": "geronimo:4000",
+      "url": "192.168.1.99:4000",
       "icon": "microsoft-xbox-controller-menu"
     },
     {
       "name": "DSL Link Info",
-      "url": "geronimo:8420",
+      "url": "192.168.1.99:8420",
       "icon": "lan"
     },
     {
       "name": "Node-RED",
-      "url": "geronimo:1880",
+      "url": "192.168.1.99:1880",
       "icon": "relation-one-to-many"
     },
-    { "name": "Apache", "url": "geronimo:1280", "icon": "feather" },
+    { "name": "Apache", "url": "192.168.1.99:1280", "icon": "feather" },
     {
       "name": "Nginx",
-      "url": "geronimo:80",
+      "url": "192.168.1.99:80",
       "icon": "alpha-n-circle-outline"
     },
     {
       "name": "WordPress",
-      "url": "geronimo:1280",
+      "url": "192.168.1.99:1280",
       "icon": "wordpress"
     },
     {
       "name": "phpMyAdmin",
-      "url": "geronimo:1280/phpmyadmin",
+      "url": "192.168.1.99:1280/phpmyadmin",
       "icon": "language-php"
     },
     {
       "name": "Blog",
-      "url": "geronimo:1313",
+      "url": "192.168.1.99:1313",
       "icon": "rss"
     },
-    { "name": "InfluxDB", "url": "geronimo:8086", "icon": "database" },
-    { "name": "Grafana", "url": "geronimo:3000", "icon": "chart-bar" },
-    { "name": "Portainer", "url": "geronimo:9000", "icon": "docker" }
+    { "name": "InfluxDB", "url": "192.168.1.99:8086", "icon": "database" },
+    { "name": "Grafana", "url": "192.168.1.99:3000", "icon": "chart-bar" },
+    { "name": "Portainer", "url": "192.168.1.99:9000", "icon": "docker" }
   ]
 }
