--- a/apps.json
+++ b/apps.json
@@ -21,7 +21,7 @@
     },
     {
       "name": "DSL Link Info",
-      "url": "192.168.1.99:8420",
+      "url": "192.168.1.99:8420/plot.html",
       "icon": "lan"
     },
     {
